<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle"
            android:layout_gravity="center"
            android:contentDescription="@string/main_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/str_text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/str_text_2nd"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="#000" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear"
            android:layout_marginTop="45dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn"
                android:fontFamily="@font/roboto"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="25dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>