<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_locker_background"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#000"
            android:fontFamily="@font/roboto"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:gravity="center"
            android:textColor="#000"
            android:fontFamily="@font/roboto"
            android:textSize="15sp"
            android:layout_marginTop="35dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:drawablePadding="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/custom_btn"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textStyle="normal"
            android:layout_marginTop="35dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>