<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#95D6A6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/roboto"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="50dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="25dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_view"
            android:drawableRight="@drawable/ic_view"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="Password"
            android:layout_marginTop="25dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_2"
            android:text="@string/login"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/when_you_agree_to_terms_and_conditions"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="#000"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_got_your_password"
            android:fontFamily="@font/roboto"
            android:textStyle="normal"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:fontFamily="@font/roboto"
            android:textStyle="normal"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_fb"
                android:background="@color/colorPrimary"/>
            <ImageView
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_zalo"
                android:background="@color/colorAccent"/>
            <ImageView
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_google"
                android:background="#fff"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>