<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/code"
            android:fontFamily="@font/roboto"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="113dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verification"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="80dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_marginTop="35dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="6"
            android:layout_gravity="center"
            android:layout_marginTop="35dp">
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/custom_btn"
            android:text="@string/verify_code"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="35dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>